e2e/envoy.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: io.envoyproxy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_service
                http_filters:
                  - name: coraza-dynamic-module
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                      dynamic_module_config:
                        name: coraza_dynamic_module
                        do_not_close: true
                        load_globally: true
                      filter_name: coraza
                      filter_config:
                        "@type": "type.googleapis.com/google.protobuf.StringValue"
                        value: |
                          {
                            "directives_map": {
                              "default": {
                                "rules": [
                                  {
                                    "type": "file",
                                    "value": "/e2e/rules.conf"
                                  }
                                ]
                              }
                            },
                            "default_directives": "default",
                            "request_config": {
                              "buffer_body_limit": 1024
                            },
                            "response_config": {
                              "buffer_body_limit": 1024
                            }
                          }
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router  
    - name: listener_1
      address:
        socket_address: { address: 0.0.0.0, port_value: 10001 }
      filter_chains:
        - filters:
            - name: io.envoyproxy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_service
                          typed_per_filter_config:
                            coraza-dynamic-module:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilterPerRoute
                              dynamic_module_config:
                                name: coraza_dynamic_module
                                do_not_close: true
                                load_globally: true
                              per_route_config_name: coraza
                              filter_config:
                                "@type": "type.googleapis.com/google.protobuf.StringValue"
                                value: |
                                  {
                                    "directives": "custom"
                                  }
                http_filters:
                  - name: coraza-dynamic-module
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
                      dynamic_module_config:
                        name: coraza_dynamic_module
                        do_not_close: true
                        load_globally: true
                      filter_name: coraza
                      filter_config:
                        "@type": "type.googleapis.com/google.protobuf.StringValue"
                        value: |
                          {
                            "directives_map": {
                              "custom": {
                                "rules": [
                                  {
                                    "type": "file",
                                    "value": "/e2e/rules.conf"
                                  }
                                ]
                              }
                            },
                            "request_config": {
                              "buffer_body_limit": 1024
                            },
                            "response_config": {
                              "buffer_body_limit": 1024
                            }
                          }
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router  
  clusters:
    - name: local_service
      type: STATIC
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: 
                      address: 127.0.0.1
                      port_value: 1234
